Update to Java 21 (#355)